# ready

./: CMakeLists.txt  Dockerfile  conanfile.txt  main.c
go/: go.mod  libready.go
